# MythiccDiscordBot

./: .env  .env.example  .gitignore  Cargo.toml  docker-compose.yml
redis-AOF/redis/data/: dump.rdb
redis-AOF/redis/data/appendonlydir/: appendonly.aof.1.base.rdb  appendonly.aof.1.incr.aof
src/: application_commands.rs  events.rs  lib.rs  log_channel.rs  main.rs  message_component_commands.rs  modal_submits.rs  redis_client.rs  slash_commands.rs  utils.rs
src/application_commands/: add_admin.rs  add_game.rs  errors.rs  get_user_id.rs  list_admins.rs  list_games.rs  ping.rs  prune.rs  remove_admin.rs  remove_game.rs  setup_pick_games_modal.rs  test_button_message.rs  test_give_roles.rs  test_log_channel.rs  test_modal.rs  test_multiple_select.rs  test_single_select.rs
src/events/: application_command.rs  errors.rs  guild_ban_addition.rs  guild_ban_removal.rs  guild_member_addition.rs  guild_member_removal.rs  guild_member_update.rs  message_component.rs  modal_submit.rs  start_up.rs  voice_state_update.rs
src/message_component_commands/: errors.rs  game_add.rs  game_add_reply.rs  game_remove.rs  game_remove_reply.rs  test_button_message.rs  test_modal.rs  test_multiple_select.rs  test_single_select.rs
src/modal_submits/: errors.rs  test_modal.rs
src/slash_commands/: add_admin.rs  errors.rs  get_user_id.rs  list_admins.rs  ping.rs  prune.rs  remove_admin.rs  test_button_message.rs  test_give_roles.rs  test_log_channel.rs  test_single_select.rs  utils.rs
