[package]
name = "mythicc_bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
dotenv = "0.15.0"
redis = "0.21.5"
thiserror = "1.0"
chrono = "0.4"
clearscreen = "1.0.10"

[dependencies.serenity]
default-features = false
git = "https://github.com/serenity-rs/serenity.git"
features = [
    "builder",
    "chrono",
    "client",
    # "framework",
    "gateway",
    "cache",
    "http",
    "model",
    "collector",
    # "standard_framework",
    "utils",
    "rustls_backend",

]
version = "0.11.5"
